# dora-metrics-calculator

./: .gitignore  ARCHITECTURE.md  EDGE_CASES_AND_IMPROVEMENTS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
src/dora_metrics/: cli.py  logging.py  models.py
src/dora_metrics/analyzers/: __init__.py  pr_health.py
src/dora_metrics/calculators/: __init__.py  metrics.py  quality.py
src/dora_metrics/extractors/: git_extractor.py  github_client.py
src/dora_metrics/processors/: __init__.py  data_associator.py
src/dora_metrics/storage/: __init__.py  csv_handler.py  repository.py  storage_manager.py
tests/e2e/: test_cli_e2e.py
tests/fixtures/: create_test_repo.py
tests/integration/: test_cli_integration.py  test_csv_workflows.py  test_data_associator.py  test_git_extractor.py  test_github_client.py  test_metrics_scenarios.py  test_storage_manager.py
tests/performance/: __init__.py  test_github_client_performance.py
tests/unit/: test_cli.py  test_csv_handler.py  test_data_associator.py  test_data_quality.py  test_git_extractor.py  test_github_client.py  test_logging.py  test_metrics_calculator.py  test_pr_health.py  test_storage_manager.py
